Adding update user information.
